Modules: MainHeader: (SCSS) Fix vertical alignement to center

--- a/src/Modules/MainHeader/MainHeader.scss
+++ b/src/Modules/MainHeader/MainHeader.scss
@@ -33,7 +33,7 @@
 
     .mh-menuitems {
         display: flex;
-        align-items: baseline;
+        align-items: center;
         gap: 20px;
 
         .mhmi-item {
